--- a/react-practice/package.json
+++ b/react-practice/package.json
@@ -11,7 +11,10 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
